加上 google cloud auto30next-web的新Oauth 3.0 用戶端id 到 index.html的 meta 標籤 2消除 Google Sign-In 相關的錯誤

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,8 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
+  <meta name="google-signin-client_id" content="270389952986-lmum5il22odck6jvasaai8uqp4hgfteq.apps.googleusercontent.com" />
 </head>
 <body>
   <script>
